Tue Jan 16 18:28:03 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add two new OmSettings, for use when opening databases:
	  database_create and database_allow_overwrite.  The idea is that
	  databases will only be created if database_create is specified,
	  and that when they are being created an exception will be thrown
	  if there's an existing database unless database_allow_overwrite
	  is specified.

	* Implemented database_create and database_allow_overwrite for
	  Quartz, which is the only relevant type for now.  Note that this
	  breaks the testsuite, quite badly.

	* Add OmDatabaseCreateError, which is thrown when creating a database
	  fails.

Tue Jan 16 17:08:47 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a typo in -ldl detection

Tue Jan 16 15:15:30 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove OmNeedRecoveryError, and quartz's quartz_perform_recovery
	  parameter.  Quartz now always performs recovery if needed: there
	  is no need for this added complication.

	* Update TODO

Tue Jan 16 14:25:03 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed references to SIGCLD to SIGCHLD as it's more portable.

Tue Jan 16 14:02:34 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Added check for whether -ldl is necessary.

Tue Jan 16 11:51:25 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Added compatibility bits for early libxml1 versions.

Mon Jan 15 18:18:01 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed use of hstrerror, which isn't portable.

Mon Jan 15 18:02:42 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix assertion which was the wrong way round in multimatch.cc

Mon Jan 15 17:46:13 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix initialisation of Btree_base::sequential when creating database.

Mon Jan 15 15:43:46 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>
